--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
       referrerpolicy="no-referrer"
     />
 
+    <!-- Testimonials -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+
     <title>Food Del</title>
   </head>
   <body>
